Revision history for {{$dist->name}}

{{$NEXT}}

0.18      2021-04-22 02:29:50 -0600
  - Added --branch | -b option (gh#12)
  - New repositories are now created with the default branch of main (gh#12)
  - Moved to new GitHub org

0.17      2017-08-08 12:41:51 -0400
  - Update for API interface change (?) allow author email
    address as either a scalar or array reference.
  - Switch back to MakeMaker for installer

0.16      2017-07-23 06:54:53 -0400
  - Remove broken link to no longer existing module

0.15      2017-07-22 22:37:59 -0400
  - Remove dependency on File::HomeDir

0.14      2017-06-05 13:55:19 -0400
  - Use v1 metacpan API (GH#9)

0.12      2014-12-20 05:27:19 -0500
  - added --trace option
  - added --output | -o option
  - added --resume option
  - added --skip optio
  - fixes for empty commits (two sequential releases that are identical) (GH#8)
  - fixes for filenames with non ASCII characters (GH#8)
  - do not import .git directory from tarballs
  - documented some previously undocumented options

0.11      2014-10-10 11:41:51 -0400
  - 'git rm' before 'git add'
    This seems to help on MSWin32, where I may have a newer version of git than on Debian Linux

0.10      2014-08-05 13:22:41 -0400
  - use HTTP::Tiny instead of LWP
    the former being part of the core as of Perl 5.14
  - use JSON::PP instead of JSON
    the former being part of the core as of Perl 5.14
  - use CPAN::ReleaseHistory instead of BackPAN::Index
    the latter may (?) be faster,
    but the former has lighter set of prereqs

0.09      2014-06-19 16:05:18 -0400
  - CPAN release (0.08 never made it to CPAN)

0.08      2014-01-08 06:10:17 -0500
  - make multiple tags a warning only
  - install with Module::Build instead of MakeMaker
  - use Archive::Extract instead of tar
  - use recursive Path::Class::File#remove and Path::Class::Dir#remove instead of calling system rm -rf

0.07      2013-10-18 12:41:40 -0400
  - make git 1.5.0 or better a requirement
