@@ -17,7 +17,6 @@ jobs:
       fail-fast: false
       matrix:
         cip_tag:
-          - static
           - "5.37"
           - "5.36"
           - "5.34"
@@ -28,11 +27,6 @@ jobs:
           #- "5.24"
           - "5.22"
           - "5.20"
-          - "5.18"
-          - "5.16"
-          - "5.14"
-          - "5.12"
-          - "5.10.1"
 
     env:
       CIP_TAG: ${{ matrix.cip_tag }}
